# coding_assignment_4-llm-intergration-with-supabase-and-streamlit

./: .gitignore  README.md  clubpenguin.txt  collector.py  loader.py  parsed_data.json  pyproject.toml  streamlit_modal.py  streamlit_run.py  structurer.py
