[project]
name = "llmintreg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "pydantic>=2.0.0",
    "supabase>=2.20.0",
    "pandas>=2.3.2",
    "streamlit>=1.50.0",
    "modal>=1.1.4",
    "plotly>=6.3.0",
]
